--- a/docs/sha256.md
+++ b/docs/sha256.md
@@ -7,5 +7,5 @@ None
 **Optional Dependencies**  
 None
 
-## *string* `sha256.crypt(string msg)`
+## *string* `sha256(string msg)`
 Converts `msg` to a SHA256 hash.
